Fix password setup links
